--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
     <script src="../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../script/menu.js" defer="defer"></script>
+    <script src="../script/vertical_effect.js" defer="defer"></script>
+    <script src="../script/mouse-effect.js"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="shortcut icon" type="image/png" sizes="24x24" href="favicon-24x24.png">
     <link rel="shortcut icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -172,7 +175,7 @@
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/capychat.jpg" alt="CapyChat"
@@ -192,7 +195,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/capyfinance.jpg" alt="CapyFinance"
@@ -212,7 +215,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/capysocial.jpg" alt="CocoDogo"
@@ -233,7 +236,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/capynext.jpg" alt="CapyNext"
@@ -252,7 +255,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/react-project.jpg" alt="Capytech React Project"
@@ -267,7 +270,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="md:pl-10 md:border-l-2 py-10">
+                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
                         <a href="./portfolio/portfolio6.html" class="md:flex">
                             <figure>
                                 <img src="./image/red_knight.jpg" alt="JavaScript RPG"
@@ -284,7 +287,7 @@
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some of my thoughts...</h2>
                     <div class="md:pl-10 md:border-l-2  py-2 md:flex max-w-6xl mx-auto">
                         <section>
-                            <article class="py-2">
+                            <article class="timeline-content js--fadeInLeft py-2">
                                 <figure>
                                     <a href="./articles/article5.html" class="md:flex">
                                         <img src="./image/web-frameworks.jpg" alt="Web Frameworks"
@@ -302,7 +305,7 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="py-2">
+                            <article class="timeline-content js--fadeInLeft py-2">
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
                                         <img src="./image/programming-languages.JPG" alt="Programming Languages"
@@ -323,7 +326,7 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="py-2">
+                            <article class="timeline-content js--fadeInLeft py-2">
                                 <figure>
                                     <a href="./articles/article3.html" class="md:flex">
                                         <img src="./image/chatgpt.jpg" alt="ChatGPT"
@@ -340,7 +343,7 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="py-2">
+                            <article class="timeline-content js--fadeInLeft py-2">
                                 <figure>
                                     <a href="./articles/article1.html" class="md:flex">
                                         <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board"
