--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -12,8 +12,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
     <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
+    <script src="../../script/vertical_effect.js" defer="defer"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -65,7 +67,7 @@
             <div class=" py-2 max-w-6xl mx-auto">
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
-                    <article class="py-2 pb-5">
+                    <article class="timeline-content js--fadeInLeft py-2 pb-5">
                         <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capychat.jpg" alt="CapyChat"
@@ -86,7 +88,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capyfinance.jpg" alt="CapyFinance"
@@ -105,7 +107,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capysocial.jpg" alt="Cocodogo" class="md:max-w-60">
@@ -122,7 +124,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capynext.jpg" alt="CapyNext"
@@ -143,7 +145,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/react-project.jpg" alt="Capytech React" class="md:max-w-60">
@@ -157,7 +159,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="./portfolio6.html" class="md:flex">
                             <figure>
                                 <img src="../image/red_knight.jpg" alt="JavaScript RPG" class="md:max-w-60">
@@ -170,7 +172,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="./portfolio7.html" class="md:flex">
                             <figure>
                                 <img src="../image/game-design1-1.jpg" alt="JavaScript smup" class="md:max-w-60">
@@ -183,7 +185,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="./portfolio8.html" class="md:flex">
                             <figure>
                                 <img src="../image/platform_game.jpg" alt="JavaScript Platform" class="md:max-w-60">
@@ -197,7 +199,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="https://codingcapy.github.io/jellyfishforest/html/index.html" target="_blank"
                             class="md:flex">
                             <figure>
@@ -217,7 +219,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="./portfolio3.html" class="md:flex">
                             <figure>
                                 <img src="../image/banking-sys-prototype.jpg" alt="Banking System Prototype"
@@ -237,7 +239,7 @@
                 <h2 class="text-4xl text-center py-10">GameProjects</h2>
                 <p>The following are game dev projects I have worked on by myself
                 <div id="pygames-section">
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="./portfolio4.html" class="md:flex">
                             <figure>
                                 <video src="../video/capy-game-design3.mp4" controls class="md:max-w-60"></video>
@@ -254,7 +256,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="./portfolio5.html" class="md:flex">
                             <figure>
                                 <video src="../video/capy-game-design1.mp4" controls class="md:max-w-60"></video>
