--- a/html/about/index.html
+++ b/html/about/index.html
@@ -15,6 +15,8 @@
     <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+    <script src="../../script/vertical_effect.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -49,7 +51,7 @@
             </nav>
         </header>
         <main class="flex-1">
-            <div class=" py-2 max-w-6xl mx-auto">
+            <div class="timeline-content js--fadeInLeft py-2 max-w-6xl mx-auto">
                 <h1 class="text-4xl text-center py-10">About Me</h1>
                 <div class="md:flex">
                     <img src="../image/paul_kim.jpg" alt="Paul Kim" class="max-w-30 md:max-w-xs rounded-full">
