--- a/html/index.html
+++ b/html/index.html
@@ -175,117 +175,127 @@
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
-                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
-                        <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="./image/capychat.jpg" alt="CapyChat"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
-                                </div>
-                                <p class="text-gray-400">This project is a fully featured fully functional live chat application written in Node Express,
-                                    React Vite and PostgreSQL
-                                    that
-                                    uses json web
-                                    token user authentication and socket.io.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, PostgreSQL,
-                                    Railway</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
-                        <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="./image/capyfinance.jpg" alt="CapyFinance"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">Personal Finance Full Stack Web App </h3>
-                                </div>
-                                <p class="text-gray-400">This project is a full-stack financial plan generating web app written in Node Express,
-                                    React Vite and MongoDB
-                                    that
-                                    uses json web
-                                    token user authentication and chartJS.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
-                                    Render</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
-                        <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="./image/capysocial.jpg" alt="CocoDogo"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">Social Platform Full Stack Web App </h3>
-                                </div>
-                                <p class="text-gray-400">This project is a full-stack web app written in Node Express,
-                                    React Vite and MongoDB
-                                    that
-                                    uses json web
-                                    token user authentication and allows users to post, comment, reply, and vote similar
-                                    to
-                                    platforms like Reddit.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Railway</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
-                        <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="./image/capynext.jpg" alt="CapyNext"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">NextJS Serverless Social Platform</h3>
-                                </div>
-                                <p class="text-gray-400">This project is a full-stack web app written in NextJS 14 and MongoDB
-                                    that
-                                    uses next-auth user authentication and allows users to post, comment, reply, and vote similar
-                                    to
-                                    platforms like Reddit.</p>
-                                <p class="tertiary-font pt-3">Stack: NextJS 14, MongoDB, Vercel</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInLeft md:pl-10 md:border-l-2 py-10">
-                        <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="./image/react-project.jpg" alt="Capytech React Project"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <h3 class="text-xl text-teal-300">Youtube Clone Front End React</h3>
-                                <p class="text-gray-400">This project is a website written entirely in React that
-                                    simulates the front end of
-                                    Youtube.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Render</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInRight md:pl-10 md:border-l-2 py-10">
-                        <a href="./portfolio/portfolio6.html" class="md:flex">
-                            <figure>
-                                <img src="./image/red_knight.jpg" alt="JavaScript RPG"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <h3 class="text-xl text-teal-300">JavaScript RPG</h3>
-                                <p class="text-gray-400">Click here to play! This project is a JavaScript RPG game I
-                                    recently completed.</p>
-                                <p class="tertiary-font pt-3">Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
-                            </figcaption>
-                        </a>
-                    </article>
+                    <div class="md:border-l-2">
+                        <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/capychat.jpg" alt="CapyChat"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
+                                    </div>
+                                    <p class="text-gray-400">This project is a fully featured fully functional live chat
+                                        application written in Node Express,
+                                        React Vite and PostgreSQL
+                                        that
+                                        uses json web
+                                        token user authentication and socket.io.</p>
+                                    <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite,
+                                        PostgreSQL,
+                                        Railway</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/capyfinance.jpg" alt="CapyFinance"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">Personal Finance Full Stack Web App </h3>
+                                    </div>
+                                    <p class="text-gray-400">This project is a full-stack financial plan generating web
+                                        app written in Node Express,
+                                        React Vite and MongoDB
+                                        that
+                                        uses json web
+                                        token user authentication and chartJS.</p>
+                                    <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
+                                        Render</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/capysocial.jpg" alt="CocoDogo"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">Social Platform Full Stack Web App </h3>
+                                    </div>
+                                    <p class="text-gray-400">This project is a full-stack web app written in Node
+                                        Express,
+                                        React Vite and MongoDB
+                                        that
+                                        uses json web
+                                        token user authentication and allows users to post, comment, reply, and vote
+                                        similar
+                                        to
+                                        platforms like Reddit.</p>
+                                    <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Railway
+                                    </p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/capynext.jpg" alt="CapyNext"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">NextJS Serverless Social Platform</h3>
+                                    </div>
+                                    <p class="text-gray-400">This project is a full-stack web app written in NextJS 14
+                                        and MongoDB
+                                        that
+                                        uses next-auth user authentication and allows users to post, comment, reply, and
+                                        vote similar
+                                        to
+                                        platforms like Reddit.</p>
+                                    <p class="tertiary-font pt-3">Stack: NextJS 14, MongoDB, Vercel</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/react-project.jpg" alt="Capytech React Project"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <h3 class="text-xl text-teal-300">Youtube Clone Front End React</h3>
+                                    <p class="text-gray-400">This project is a website written entirely in React that
+                                        simulates the front end of
+                                        Youtube.</p>
+                                    <p class="tertiary-font pt-3">Stack: Node, Express, React, Vite, MongoDB, Render</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <a href="./portfolio/portfolio6.html" class="md:flex">
+                                <figure>
+                                    <img src="./image/red_knight.jpg" alt="JavaScript RPG"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <h3 class="text-xl text-teal-300">JavaScript RPG</h3>
+                                    <p class="text-gray-400">Click here to play! This project is a JavaScript RPG game I
+                                        recently completed.</p>
+                                    <p class="tertiary-font pt-3">Stack: HTML5, CSS3, JavaScript ES06, JQuery</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                    </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some of my thoughts...</h2>
-                    <div class="md:pl-10 md:border-l-2  py-2 md:flex max-w-6xl mx-auto">
+                    <div class="md:pl-10 md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
                             <article class="timeline-content js--fadeInLeft py-2">
                                 <figure>
