--- a/html/index.html
+++ b/html/index.html
@@ -82,10 +82,10 @@
                             </h1>
                             <div class="flex-1"></div>
                         </div>
-                        <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
-                        <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
+                        <h2 class="timeline-content js--fadeInLeft text-2xl py-2">Full Stack Software Engineer</h2>
+                        <p class="timeline-content js--fadeInLeft py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
                             Canada. I build modern websites using React.js, Node.js, Express.js and Next.js.</p>
-                        <div class="flex py-5">
+                        <div class="timeline-content js--fadeInLeft flex py-5">
                             <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
                                     target="_blank">
@@ -131,48 +131,55 @@
                     </div>
                 </div>
                 <div class="py-10 flex-1">
-                    <p class="md:pl-10 md:border-l-2 py-2 text-gray-400">I have recently completed the <strong
-                            class="text-white">Applied
-                            Software
-                            Development</strong> and <strong class="text-white">Applied
-                            Web Development</strong> certificates at British
-                        Columbia Institute
-                        of Technology (BCIT) and currently I am working
-                        towards the Applied Computer Information Systems
-                        certificate and Computer Systems Diploma concurrently.</p>
+                    <div class="md:border-l-2 ">
+                        <p class="timeline-content js--fadeInRight md:pl-10 py-2 text-gray-400">I have recently
+                            completed the <strong class="text-white">Applied
+                                Software
+                                Development</strong> and <strong class="text-white">Applied
+                                Web Development</strong> certificates at British
+                            Columbia Institute
+                            of Technology (BCIT) and currently I am working
+                            towards the Applied Computer Information Systems
+                            certificate and Computer Systems Diploma concurrently.</p>
+                    </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">My tech stack</h2>
-                    <div class="md:pl-10 md:border-l-2 grid grid-cols-3 py-10 ">
-                        <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
-                                alt="Python"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://www.java.com/en/" target="_blank"><img src="../html/image/java.png" alt="Java"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><img
-                                src="../html/image/c.png" alt="C"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                    <div class="md:border-l-2 ">
+                        <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 py-10 ">
+                            <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
+                                    alt="Python"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://www.java.com/en/" target="_blank"><img src="../html/image/java.png"
+                                    alt="Java"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><img
+                                    src="../html/image/c.png" alt="C"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
 
-                        <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img src="../html/image/html5.png"
-                                alt=""
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img src="../html/image/css3.png"
-                                alt=""
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
-                                src="../html/image/javascript.png" alt="JavaScript"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
-                                alt="SQL"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://nodejs.org/en" target="_blank"><img src="../html/image/nodejs.png"
-                                alt="Node.js"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png" alt="React.js"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://expressjs.com/" target="_blank" class="my-auto"><img
-                                src="../html/image/expressjs.jpg" alt="Express.js"
-                                class="mx-auto my-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img
+                                    src="../html/image/html5.png" alt=""
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img
+                                    src="../html/image/css3.png" alt=""
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
+                                    src="../html/image/javascript.png" alt="JavaScript"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
+                                    alt="SQL"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://nodejs.org/en" target="_blank"><img src="../html/image/nodejs.png"
+                                    alt="Node.js"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png"
+                                    alt="React.js"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://expressjs.com/" target="_blank" class="my-auto"><img
+                                    src="../html/image/expressjs.jpg" alt="Express.js"
+                                    class="mx-auto my-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg"
+                                    alt="React.js"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                        </div>
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
                     <div class="md:border-l-2">
