--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lekton:wght@700&display=swap" rel="stylesheet">
     <meta name="msapplication-TileColor" content="#da524c">
     <meta name="theme-color" content="#ffffff">
+    <script src="../script/type-effect.js" defer></script>
 </head>
 
 <body>
@@ -76,10 +77,12 @@
                 <div class="my-10 pr-10  flex-1">
                     <div class="sticky top-28 z-30">
                         <div class="flex">
-                            <h1 class="flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font" id="paul">Hi,
+                            <!-- <h1 class="flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font" id="paul">Hi,
                                 I'm
                                 <span class="pl-3 text-teal-300 font-extrabold primary-font">Paul</span>👨🏻‍💻
-                            </h1>
+                            </h1> -->
+                            <h1 class="intro flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font"></h1>
+                            <span class="myName flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font pl-3 text-teal-300 "></span>
                             <div class="flex-1"></div>
                         </div>
                         <h2 class="timeline-content js--fadeInLeft text-2xl py-2">Full Stack Software Engineer</h2>
