--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,41 @@
     <meta name="msapplication-TileColor" content="#da524c">
     <meta name="theme-color" content="#ffffff">
     <script src="../script/type-effect.js" defer></script>
+    <script src="../script/mouse-effect.js" defer></script>
 </head>
 
 <body>
     <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
+        <div id='speedcapture'>
+            <div class='ghost face'>
+                <div class='arms'>
+                    <div class='arm'></div>
+                    <div class='arm'></div>
+                </div>
+                <div class='inner'>
+                    <div class='mouth'></div>
+                </div>
+            </div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+        </div>
         <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" class="max-w-10"></a>
@@ -82,11 +113,13 @@
                                 <span class="pl-3 text-teal-300 font-extrabold primary-font">Paul</span>👨🏻‍💻
                             </h1> -->
                             <h1 class="intro flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font"></h1>
-                            <span class="myName flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font pl-3 text-teal-300 "></span>
+                            <span
+                                class="myName flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font pl-3 text-teal-300 "></span>
                             <div class="flex-1"></div>
                         </div>
                         <h2 class="timeline-content js--fadeInLeft text-2xl py-2">Full Stack Software Engineer</h2>
-                        <p class="timeline-content js--fadeInLeft py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
+                        <p class="timeline-content js--fadeInLeft py-2 text-gray-400">I am a full stack developer based
+                            in Vancouver, British Columbia,
                             Canada. I build modern websites using React.js, Node.js, Express.js and Next.js.</p>
                         <div class="timeline-content js--fadeInLeft flex py-5">
                             <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
