--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -17,6 +17,7 @@
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="../../script/vertical_effect.js" defer="defer"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../../script/mouse-effect.js" defer></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -28,6 +29,36 @@
 
 <body>
     <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
+        <div id='speedcapture'>
+            <div class='ghost face'>
+                <div class='arms'>
+                    <div class='arm'></div>
+                    <div class='arm'></div>
+                </div>
+                <div class='inner'>
+                    <div class='mouth'></div>
+                </div>
+            </div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+        </div>
         <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
             <div class="flex justify-between">
                 <a href="../index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
