--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
+    <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
         <div id='speedcapture'>
             <div class='ghost face'>
                 <div class='arms'>
@@ -68,8 +68,8 @@
             <div class='ghost'></div>
             <div class='ghost'></div>
         </div>
-        <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
-            <div class="flex justify-between">
+        <header class="md:flex bg-slate-800 py-2 sticky top-0 z-50">
+            <div class="flex justify-between px-2">
                 <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden" id="hamburger-menu">&#127828;</button>
             </div>
@@ -103,7 +103,7 @@
             </nav>
         </header>
 
-        <main class="flex-1 max-w-7xl mx-auto">
+        <main class="flex-1 max-w-7xl px-1 mx-auto">
             <div class=" py-2 md:flex mx-auto">
                 <div class="my-10 pr-10  flex-1">
                     <div class="sticky top-28 z-30">
