--- a/html/resume/index.html
+++ b/html/resume/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
+    <script src="../../script/mouse-effect.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -25,31 +26,73 @@
 </head>
 
 <body>
-    <div class="flex flex-col min-h-screen mx-auto px-1 bg-slate-800 text-white">
-        <header class="md:flex bg-slate-800 px-2 py-2 sticky top-0 z-50">
-            <div class="flex justify-between">
+    <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
+        <div id='speedcapture'>
+            <div class='ghost face'>
+                <div class='arms'>
+                    <div class='arm'></div>
+                    <div class='arm'></div>
+                </div>
+                <div class='inner'>
+                    <div class='mouth'></div>
+                </div>
+            </div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+            <div class='ghost'></div>
+        </div>
+        <header class="md:flex bg-slate-800 py-2 sticky top-0 z-50">
+            <div class="flex justify-between px-2">
                 <a href="../index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/portfolio/index.html">Portfolio</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/index.html">Home</a></li>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/articles/index.html">Articles</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/about/index.html">About</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/resume/index.html">Resume</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/resume/index.html">Resume</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/contact/index.html">Contact</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
-        <main class="flex-1">
+        <main class="flex-1 px-1">
             <div class="py-2 max-w-6xl mx-auto">
                 <h1 class="text-4xl text-center py-10">Resume</h1>
                 <img src="../image/paulkim_resume_2024.jpg" alt="Paul Kim" class="md:max-w-4xl mx-auto">
