--- a/html/index.html
+++ b/html/index.html
@@ -220,6 +220,7 @@
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
                     <div class="md:border-l-2">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capychat.jpg" alt="CapyChat"
@@ -242,6 +243,7 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capyfinance.jpg" alt="CapyFinance"
@@ -263,6 +265,7 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capysocial.jpg" alt="CocoDogo"
@@ -287,6 +290,7 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capynext.jpg" alt="CapyNext"
@@ -308,6 +312,7 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/react-project.jpg" alt="Capytech React Project"
@@ -323,6 +328,7 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
+                            <div class="timeline-img hidden md:block"></div>
                             <a href="./portfolio/portfolio6.html" class="md:flex">
                                 <figure>
                                     <img src="./image/red_knight.jpg" alt="JavaScript RPG"
@@ -338,9 +344,10 @@
                         </article>
                     </div>
                     <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some of my thoughts...</h2>
-                    <div class="md:pl-10 md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
+                    <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
-                            <article class="timeline-content js--fadeInLeft py-2">
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <div class="timeline-img hidden md:block"></div>
                                 <figure>
                                     <a href="./articles/article5.html" class="md:flex">
                                         <img src="./image/web-frameworks.jpg" alt="Web Frameworks"
@@ -358,7 +365,8 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="timeline-content js--fadeInLeft py-2">
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <div class="timeline-img hidden md:block"></div>
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
                                         <img src="./image/programming-languages.JPG" alt="Programming Languages"
@@ -379,7 +387,8 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="timeline-content js--fadeInLeft py-2">
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <div class="timeline-img hidden md:block"></div>
                                 <figure>
                                     <a href="./articles/article3.html" class="md:flex">
                                         <img src="./image/chatgpt.jpg" alt="ChatGPT"
@@ -396,7 +405,8 @@
                                     </a>
                                 </figure>
                             </article>
-                            <article class="timeline-content js--fadeInLeft py-2">
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <div class="timeline-img hidden md:block"></div>
                                 <figure>
                                     <a href="./articles/article1.html" class="md:flex">
                                         <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board"
