--- a/html/index.html
+++ b/html/index.html
@@ -167,8 +167,11 @@
                     </div>
                 </div>
                 <div class="py-10 flex-1">
-                    <div class="md:border-l-2 ">
-                        <p class="timeline-content js--fadeInRight md:pl-10 py-2 text-gray-400">I have recently
+                    <div class="md:border-l-2 md:pl-10">
+                        <div
+                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[0px] left-[-46px] ">
+                        </div>
+                        <p class="timeline-content js--fadeInRight py-2 text-gray-400">I have recently
                             completed the <strong class="text-white">Applied
                                 Software
                                 Development</strong> and <strong class="text-white">Applied
@@ -178,7 +181,12 @@
                             towards the Applied Computer Information Systems
                             certificate and Computer Systems Diploma concurrently.</p>
                     </div>
-                    <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">My tech stack</h2>
+                    <div class="md:border-l-2 text-2xl md:pl-10 py-2">
+                        <div
+                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                        </div>
+                        <h2 class="text-2xl">My tech stack</h2>
+                    </div>
                     <div class="md:border-l-2 ">
                         <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 py-10 ">
                             <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
@@ -217,10 +225,14 @@
                                     class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         </div>
                     </div>
-                    <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some things I've built...</h2>
+                    <div class="md:pl-10 md:border-l-2 text-2xl py-2">
+                        <div
+                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                        </div>
+                        <h2>Some things I've built...</h2>
+                    </div>
                     <div class="md:border-l-2">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capychat.jpg" alt="CapyChat"
@@ -243,7 +255,6 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capyfinance.jpg" alt="CapyFinance"
@@ -265,7 +276,6 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capysocial.jpg" alt="CocoDogo"
@@ -290,7 +300,6 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capynext.jpg" alt="CapyNext"
@@ -312,7 +321,6 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/react-project.jpg" alt="Capytech React Project"
@@ -328,7 +336,6 @@
                             </a>
                         </article>
                         <article class="timeline-content js--fadeInRight md:pl-10 py-10">
-                            <div class="timeline-img hidden md:block"></div>
                             <a href="./portfolio/portfolio6.html" class="md:flex">
                                 <figure>
                                     <img src="./image/red_knight.jpg" alt="JavaScript RPG"
@@ -343,11 +350,16 @@
                             </a>
                         </article>
                     </div>
-                    <h2 class="md:pl-10 md:border-l-2 text-2xl py-2">Some of my thoughts...</h2>
+                    <div class="md:pl-10 md:border-l-2 text-2xl py-2">
+                        <div
+                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                        </div>
+                        <h2 >Some of my thoughts...</h2>
+                    </div>
                     <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-                                <div class="timeline-img hidden md:block"></div>
+
                                 <figure>
                                     <a href="./articles/article5.html" class="md:flex">
                                         <img src="./image/web-frameworks.jpg" alt="Web Frameworks"
@@ -366,7 +378,7 @@
                                 </figure>
                             </article>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-                                <div class="timeline-img hidden md:block"></div>
+
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
                                         <img src="./image/programming-languages.JPG" alt="Programming Languages"
@@ -388,7 +400,7 @@
                                 </figure>
                             </article>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-                                <div class="timeline-img hidden md:block"></div>
+
                                 <figure>
                                     <a href="./articles/article3.html" class="md:flex">
                                         <img src="./image/chatgpt.jpg" alt="ChatGPT"
@@ -406,7 +418,7 @@
                                 </figure>
                             </article>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-                                <div class="timeline-img hidden md:block"></div>
+
                                 <figure>
                                     <a href="./articles/article1.html" class="md:flex">
                                         <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board"
