--- a/html/index.html
+++ b/html/index.html
@@ -102,11 +102,10 @@
                 </ul>
             </nav>
         </header>
-
         <main class="flex-1 max-w-7xl px-1 mx-auto">
-            <div class=" py-2 md:flex mx-auto">
-                <div class="my-10 pr-10  flex-1">
-                    <div class="sticky top-28 z-30">
+            <div class="py-2 md:flex mx-auto">
+                <div class="my-10 pr-10 flex-1">
+                    <div class="md:fixed top-28 z-30">
                         <div class="flex">
                             <!-- <h1 class="flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font" id="paul">Hi,
                                 I'm
@@ -117,11 +116,13 @@
                                 class="myName flex pr-0 mr-0 text-4xl md:text-6xl font-extrabold primary-font pl-3 text-teal-300 "></span>
                             <div class="flex-1"></div>
                         </div>
-                        <h2 class="timeline-content js--fadeInLeft text-2xl py-2">Full Stack Software Engineer</h2>
-                        <p class="timeline-content js--fadeInLeft py-2 text-gray-400">I am a full stack developer based
+                        <h2 class="js--fadeInLeft text-2xl py-2">Full Stack Software Engineer</h2>
+                        <p class="js--fadeInLeft pt-2 text-gray-400">I am a full stack developer based
                             in Vancouver, British Columbia,
-                            Canada. I build modern websites using React.js, Node.js, Express.js and Next.js.</p>
-                        <div class="timeline-content js--fadeInLeft flex py-5">
+                            Canada.</p>
+                        <p class="js--fadeInLeft pb-2 text-gray-400">I build modern websites using React.js, Node.js,
+                            Express.js and Next.js.</p>
+                        <div class="js--fadeInLeft flex py-5">
                             <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
                                     target="_blank">
@@ -354,7 +355,7 @@
                         <div
                             class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
                         </div>
-                        <h2 >Some of my thoughts...</h2>
+                        <h2>Some of my thoughts...</h2>
                     </div>
                     <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
