--- a/html/index.html
+++ b/html/index.html
@@ -234,6 +234,23 @@
                     </div>
                     <div class="md:border-l-2">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <a href="https://www.visioncoding.ca/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/visioncoding.jpg" alt="Vision Coding Academy"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">Company Website</h3>
+                                    </div>
+                                    <p class="text-gray-400">Official Live Website for Vision Coding Academy in Vancouver, BC, Canada that I have single-handedly built in collaboration with design references from UI/UX and graphic designers. UI/UX credits to: @stephology</p>
+                                    <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite, Bluehost,
+                                        PostgreSQL,
+                                        Railway</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
                             <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capychat.jpg" alt="CapyChat"
