--- a/html/index.html
+++ b/html/index.html
@@ -75,28 +75,22 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/index.html">Home</a>
                     </li>
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/articles/index.html">Articles</a>
                     </li>
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/about/index.html">About</a>
                     </li>
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/resume/index.html">Resume</a>
                     </li>
-                    <li
-                        class="glow px-5 py-3 text-center md:block rounded-md">
+                    <li class="glow px-5 py-3 text-center md:block rounded-md">
                         <a href="../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
@@ -125,7 +119,7 @@
                         <div class="js--fadeInLeft flex py-5">
                             <div class="rounded-md transition ease-in-out duration-300">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
-                                    target="_blank" >
+                                    target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="55" height="55"
                                         viewBox="0 0 64 64" style="fill:#FFFFFF;" class="glow2">
                                         <path
@@ -172,15 +166,13 @@
                         <div
                             class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[0px] left-[-46px] ">
                         </div>
-                        <p class="timeline-content js--fadeInRight py-2 text-gray-400">I have recently
+                        <p class="timeline-content js--fadeInRight py-2 text-gray-400">I have
                             completed the <strong class="text-white">Applied
                                 Software
-                                Development</strong> and <strong class="text-white">Applied
-                                Web Development</strong> certificates at British
+                                Development</strong>, <strong class="text-white">Applied
+                                Web Development</strong> and <strong class="text-white">Applied Computer Information Systems</strong> certificates at British
                             Columbia Institute
-                            of Technology (BCIT) and currently I am working
-                            towards the Applied Computer Information Systems
-                            certificate and Computer Systems Diploma concurrently.</p>
+                            of Technology (BCIT), and I am currently working towards the Computer Systems Diploma.</p>
                     </div>
                     <div class="md:border-l-2 text-2xl md:pl-10 py-2">
                         <div
@@ -243,9 +235,12 @@
                                     <div class="flex">
                                         <h3 class="text-xl text-teal-300 pr-1">Company Website</h3>
                                     </div>
-                                    <p class="text-gray-400">Official Live Website for Vision Coding Academy in Vancouver, BC, Canada that I have single-handedly built in collaboration with design references from UI/UX and graphic designers. UI/UX credits to: @stephology</p>
-                                    <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite, Bluehost,
-                                        PostgreSQL,
+                                    <p class="text-gray-400">Official Live Website for Vision Coding Academy in
+                                        Vancouver, BC, Canada that I have single-handedly built in collaboration with
+                                        design references from UI/UX and graphic designers. UI/UX credits to:
+                                        @stephology</p>
+                                    <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite, 
+                                        PostgreSQL, Bluehost, 
                                         Railway</p>
                                 </figcaption>
                             </a>
